tests/blob/ommiting_null_fields_faulty.sy
A :: blob {
    a: int | void,
}
start :: fn do
    a := A {}
    print(a.a)
end
// error: $MissingField { .. }
